SyntacticAnalyzer/tests/fail/sentenciasimple-expresion01.java
class foo {

		ctor (int n1)
		var int n2;
		{
			// falta )
			(true&&false;
		}
}
